--- a/pom.xml
+++ b/pom.xml
@@ -380,6 +380,7 @@ under the License.
 							<exclude>**/src/assembly/metamodel-packaged-assembly-descriptor.xml</exclude>
 							<exclude>**/.gitignore/**</exclude>
 							<exclude>.git/**</exclude>
+							<exclude>.github/**</exclude>
 							<exclude>.gitattributes</exclude>
 							<exclude>**/.toDelete</exclude>
 							<exclude>**/src/main/resources/META-INF/services/**</exclude>
