--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@ under the License.
 	</scm>
 	<groupId>org.eobjects.metamodel</groupId>
 	<artifactId>MetaModel</artifactId>
-	<version>5.3.4</version>
+	<version>5.3.4-SNAPSHOT</version>
 	<name>MetaModel</name>
 	<description>MetaModel is a library that encapsulates the differences and enhances 
 		the capabilities of different datastores. Rich querying abilities are
