--- a/pom.xml
+++ b/pom.xml
@@ -21,16 +21,21 @@ under the License.
 	<modelVersion>4.0.0</modelVersion>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		
+		<!-- Maven plugin versions -->
+		<javadoc.version>3.3.1</javadoc.version>
 		<sshwagon.version>2.6</sshwagon.version>
-		<javadoc.version>2.10.3</javadoc.version>
-		<slf4j.version>1.7.32</slf4j.version>
+		
+		<!-- Dependency versions -->
+		<slf4j.version>1.7.33</slf4j.version>
 		<junit.version>4.12</junit.version>
 		<guava.version>31.0.1-jre</guava.version>
 		<hadoop.version>3.3.1</hadoop.version>
 		<jackson.version>2.13.1</jackson.version>
 		<easymock.version>3.6</easymock.version>
-		<spring.version>5.2.2.RELEASE</spring.version>
-		<httpcomponents.version>4.4.1</httpcomponents.version>
+		<spring.version>5.2.19.RELEASE</spring.version>
+		<httpcomponents.version>4.5.13</httpcomponents.version>
 		<docker-maven-plugin.version>0.23.0</docker-maven-plugin.version>
 		<skipTests>false</skipTests>
 	</properties>
@@ -473,16 +478,6 @@ under the License.
 				<groupId>net.sourceforge.findbugs</groupId>
 				<artifactId>annotations</artifactId>
 				<version>1.3.2</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.httpcomponents</groupId>
-				<artifactId>httpcore</artifactId>
-				<version>${httpcomponents.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.httpcomponents</groupId>
-				<artifactId>httpclient-cache</artifactId>
-				<version>${httpcomponents.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-lang</groupId>
