--- a/dynamodb/pom.xml
+++ b/dynamodb/pom.xml
@@ -21,7 +21,7 @@ under the License.
 	<parent>
 		<artifactId>MetaModel</artifactId>
 		<groupId>org.eobjects.metamodel</groupId>
-		<version>5.3.5-SNAPSHOT</version>
+		<version>5.3.6</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>MetaModel-dynamodb</artifactId>
