--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,11 @@ under the License.
 		<url>https://github.com/datacleaner/metamodel</url>
 		<connection>scm:git:git@github.com:datacleaner/metamodel.git</connection>
 		<developerConnection>scm:git:git@github.com:datacleaner/metamodel.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>MetaModel-5.3.6</tag>
 	</scm>
 	<groupId>org.eobjects.metamodel</groupId>
 	<artifactId>MetaModel</artifactId>
-	<version>5.3.5-SNAPSHOT</version>
+	<version>5.3.6</version>
 	<name>MetaModel</name>
 	<description>MetaModel is a library that encapsulates the differences and enhances 
 		the capabilities of different datastores. Rich querying abilities are
